src/mecab/src/mecab.h

  MECAB_DLL_EXTERN int           mecab_test_gen(int argc, char **argv);
typedef struct _Mecab{
   char **feature;
   int size;
   void *model;
   void *tagger;
   void *lattice;
} Mecab;
BOOL Mecab_initialize(Mecab *m);
BOOL Mecab_load(Mecab *m, const char *dicdir);
BOOL Mecab_load_with_userdic(Mecab *m, const char *dicdir, const char *userdic);
BOOL Mecab_analysis(Mecab *m, const char *str);
BOOL Mecab_print(Mecab *m);
int Mecab_get_size(Mecab *m);
char **Mecab_get_feature(Mecab *m);
BOOL Mecab_refresh(Mecab *m);
BOOL Mecab_clear(Mecab *m);